Finished the layout and styling of the detail component. It is correctly displaying all data correctly on mobile view for iPhoneX. Need to implement rate function.

--- a/src/app/components/movie-list/movie-list.component.scss
+++ b/src/app/components/movie-list/movie-list.component.scss
@@ -3,6 +3,7 @@
 
   .movieListCard {
     height: 100%;
+    border-radius: 0;
     overflow: scroll;
 
     .searchDiv {
